# upf-bpf

./: .clang-format  .editorconfig  .env.sample.sh  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  log.txt.  notebook.html  notebook.ipynb  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json
cmake/: Configuration.cpp.in  Configuration.h.in  UpfBpfConfig.cmake.in  toolchain.cmake
docker/: Dockerfile  build-docker  build_docker  docker-compose.yml  entrypoint.sh  run-docker  run_docker
include/: README.md  bpf_endian.h  bpf_helper_defs.h  bpf_helpers.h  gmock  gtest  if_ether.h  libbpf.h  libbpf_common.h  linux  spdlog  types.h  vmlinux.h  vmlinux_513.h
include/bpf/: bpf.h  (+2 more)
samples/: CMakeLists.txt  README.md  sock_example.h  sockex3_user.c  xdp_hello_world_user.c  xdp_redirect_map_user.c
samples/bpf/: CMakeLists.txt  sockex3_kern.c  xdp_hello_world_bpf.c  xdp_redirect_map_kern.c
src/: CMakeLists.txt  Main.cpp  ProgramLifeCycle.hpp  SessionManager.cpp  SessionManager.h  SessionProgram.cpp  SessionProgram.h  SessionProgramManager.cpp  SessionProgramManager.h  SessionPrograms.cpp  SessionPrograms.h  SignalHandler.cpp  SignalHandler.h  UPFProgram.cpp  UPFProgram.h  UPFProgramManager.cpp  UPFProgramManager.h  UserPlaneComponent.cpp  UserPlaneComponent.h  upf_xdp_user.c
src/bpf/: CMakeLists.txt  far_bpf.c  far_maps.h  gtpu.h  maps.h  next_prog_rule_key.h  next_prog_rule_map.h  program_defines.h  session_bpf.c  session_bpf_maps.h  session_context_maps.h  upf_xdp_bpf.c  upf_xdp_bpf_dl.c  upf_xdp_bpf_maps.h  xdp_stats_kern.h  xdp_stats_kern_user.h
src/bpf/ie/: activate_predefined_rules.h  application_id.h  apply_action.h  bar_id.h  destination_interface.h  ethernet_pdu_session_information.h  far_id.h  fowarding_policy.h  framed_ipv6_routing.h  framed_route.h  framed_routing.h  fseid.h  fteid.h  header_enrichment.h  ie_base.h  network_instance.h  outer_header_creation.h  outer_header_removal.h  pdr_id.h  precedence.h  proxing.h  qer_id.h  qfi.h  redirect_information.h  sdf_filter.h  source_interface.h  teid.h  traffic_endpoint_id.h  transport_level_marking.h  ue_ip_address.h  urr_id.h
src/bpf/ie/group_ie/: create_far.h  create_pdr.h  duplicating_parameters.h  forwarding_parameters.h  pdi.h
src/bpf/lib/: crc16.h
src/bpf/msg/: pfcp_header.h
src/bpf/pfcp/: pfcp_far.h  pfcp_pdr.h  pfcp_pdrs.h  pfcp_session.h
src/bpf/protocols/: eth.h  gtpu.h  ip.h  udp.h
src/bpf/utils/: csum.h  logger.h  utils.h
src/interfaces/: ForwardingActionRules.h  PacketDetectionRules.h  RulesUtilities.h  SessionBpf.h
src/oai/: CMakeLists.txt
src/oai/common/: 3gpp_23.003.h  3gpp_24.008.h  3gpp_29.244.h  3gpp_29.274.h  3gpp_29.281.h  3gpp_29.500.h  3gpp_29.510.h  3gpp_commons.h  CMakeLists.txt  common_defs.h  common_root_types.c  common_root_types.h  endpoint.hpp  logger.cpp  logger.hpp  rfc_1332.h  rfc_1877.h  serializable.hpp
src/oai/common/utils/: 3gpp_conversions.cpp  3gpp_conversions.hpp  CMakeLists.txt  async_shell_cmd.cpp  async_shell_cmd.hpp  conversions.cpp  conversions.hpp  epc.cpp  epc.h  fqdn.cpp  fqdn.hpp  get_gateway_netlink.cpp  get_gateway_netlink.hpp  if.cpp  if.hpp  pid_file.cpp  pid_file.hpp  string.cpp  string.hpp  thread_sched.cpp  thread_sched.hpp  uint_generator.hpp
src/oai/pfcp/: 3gpp_29.244.cpp  3gpp_29.244.hpp  msg_pfcp.hpp  pfcp_far.cpp  pfcp_far.hpp  pfcp_pdr.cpp  pfcp_pdr.hpp  pfcp_session.cpp  pfcp_session.hpp
src/observer/: OnStateChangeSessionProgramObserver.h
src/pfcp/: ForwardingActionRule.cpp  ForwardingActionRule.h  PacketDetectionInformation.cpp  PacketDetectionInformation.h  PacketDetectionRule.cpp  PacketDetectionRule.h  Session.cpp  Session.h
src/programs/: BPFProgram.cpp  BPFProgram.h  FARProgram.cpp  FARProgram.h  ProgramLifeCycle.hpp  SessionProgram.cpp  SessionProgram.h  UPFProgram.cpp  UPFProgram.h
src/utils/: CMakeLists.txt  LogDefines.h  Logger.cpp  Logger.h  LoggerBase.h  NextProgRuleKey.cpp  Util.cpp  Util.h
src/wrappers/: BPFMap.cpp  BPFMap.hpp  BPFMaps.cpp  BPFMaps.h
tests/: CMakeLists.txt  ControlPlaneTests.cpp  InformationElementFactory.hpp  Main.cpp  README.md  SessionManagerTests.cpp  config_veth_pair.sh  gtpu-traffic-generator.py  scapy
tests/api/: CMakeLists.txt  Controller.cpp  Controller.h  Server.cpp
tests/api/requests_body/: configure.json  create_session.json  gtp-postman-colletion.json  pfcp_session.json  udp-postman-colletion.json
tests/interfaces/: CMakeLists.txt  ForwardingActionRulesImpl.cpp  ForwardingActionRulesImpl.h  PacketDetectionRulesImpl.cpp  PacketDetectionRulesImpl.h  RulesUtilitiesImpl.cpp  RulesUtilitiesImpl.h  SessionBpfImpl.cpp  SessionBpfImpl.h
tests/reports/: 20211019-001341-20211019-001341-UplinkMaxThoughtput-1000flow-6rx.json  DownlinkMaxThoughtput.json  README.md  UplinkMaxThoughtput.json
tests/reports/img/: README.md
tests/reports/v1.0.0/: 20211019-000351-20211019-000351-DownlinkMaxThoughtput-1000flow-6rx.json
tests/reports/v2.0.0/: 20220108-144520-20220108-144520-UplinkMaxThoughtput-1000flow-6rx.json  20220108-145122-20220108-145122-DownlinkMaxThoughtput-1000flow-6rx.json  20220213-215340-20220213-215340-DownlinkMaxThoughtput-1000flow-6rx.json  20220213-221211-20220213-221211-UplinkMaxThoughtput-1000flow-6rx.json  DownlinkMaxThoughtput.json  UplinkMaxThoughtput.json
tests/scripts/: config_veth_pair  config_veth_pair.sh  deploy_package  deploy_trex_config  force_xdp_deload  gtpu-traffic-generator.py  install_trex  install_trex_remote  remote_install_trex  remote_run_trex_server  run_sample  run_test  run_test_case  run_trex_server  run_trex_test_case  start_session
tests/scritps/: gtpu-traffic-generator.py
tests/trex/config/: platform_profile_dpdk.yaml  platform_profile_local.yaml
tests/trex/test_cases/: creator6.py  hello_world.py  run.py  testbed_creator.sh  udp_downlink.py  udp_downlink_2_stream.py  udp_downlink_tuple_gen.py
tests/trex/test_cases/test-sessions/: .gitignore  configure-gtp.json  configure-udp.json
tests/trex/traffic/: gtp_1pkt_simple.py  udp_1pkt_simple.py  udp_1pkt_simple_2stream.py  udp_1pkt_tuple_gen.py
